# TinySpace

./: .gitignore  CMakeLists.txt  config.h  game.cpp  game.h  main.cpp
Entity/: bullet.cpp  bullet.h  enemy.cpp  enemy.h  entity.h  player.cpp  player.h
Scene/: aboutMenu.cpp  aboutMenu.h  gameOverMenu.cpp  gameOverMenu.h  helpMenu.cpp  helpMenu.h  mainMenu.cpp  mainMenu.h  menu.h  pauseMenu.cpp  pauseMenu.h  play.cpp  play.h
Sound/: soundManager.cpp  soundManager.h
